--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,8 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B>SELECT A CAMERA TYPE<BR> 
 <a href="indoor.html">INDOOR</a>,  |
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Outdoor.html">OUTDOOR</a>	|
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/DOORBELL.html">DOORBELL</a>
+<a href="Outdoor.html">OUTDOOR</a>	|
+<a href="DOORBELL.html">DOORBELL</a>
 </p>
 
 
