--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B>SELECT A CAMERA TYPE<BR> 
 <a href="indoor.html">INDOOR</a>,  |
 <a href="Outdoor.html">OUTDOOR</a>	|
-<a href="DOORBELL.html">DOORBELL</a>
+<a href="DOORBELL.HTML">DOORBELL</a>
 </p>
 
 
