--- a/html/indoor.html
+++ b/html/indoor.html
@@ -15,10 +15,10 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/SKYBELLHD.html">ADC-V523X HD </a>
-<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/v523.jpg">	
+<img src="v523.jpg">	
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-622-WELL </a>	
-<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/wellness.jpg">
+<img src="wellness.jpg">
 
 <p><B><BR> 
 <p><B><BR> 
