--- a/html/Outdoor.html
+++ b/html/Outdoor.html
@@ -15,9 +15,9 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/V723-724.html">ADC-V723/ADC-V724X </a>	<BR> 
-<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/723-724.jpg">
+<img src="723-724.jpg">
 
 
 <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	
+<a href="index.html">START OVER</a>	
