--- a/html/Outdoor.html
+++ b/html/Outdoor.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/V723-724.html">ADC-V723/ADC-V724X </a>	<BR> 
+<a href="V723-724.html">ADC-V723/ADC-V724X </a>	<BR> 
 <img src="723-724.jpg">
 
 
