--- a/html/V723-724.html
+++ b/html/V723-724.html
@@ -9,13 +9,13 @@ CAMERA TROUBLESHOOTING GUIDE
 </Head>  
 <Body>  <CENTER>
    <h1>ADC-V723/V724X</h2>
-<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/723-724.jpg">
+<img src="723-724.jpg">
  
 
 
 <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Not Responding.html">Video Device Not Responding </a> |
+<a href="Not Responding.html">Video Device Not Responding </a> |
 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">Not Recording Clips </a> |
