--- a/html/Not Responding.html
+++ b/html/Not Responding.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> Is the LED on the front of the camera on? <br>
 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/LED color.html">Yes </a> |
+<a href="LED color.html">Yes </a> |
 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">No </a> |
@@ -25,5 +25,5 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/v723-724.html">GO BACK</a>	
+<a href="index.html">START OVER</a>	
+<a href="v723-724.html">GO BACK</a>	
