--- a/html/Not Responding.html
+++ b/html/Not Responding.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> Is the LED on the front of the camera on? <br>
 
 
-<a href="LED color.html">Yes </a> |
+<a href="LED Color.html">Yes </a> |
 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">No </a> |
