--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 <Title>     
 CAMERA TROUBLESHOOTING GUIDE
 
+   <Body background="C:\Users\513815\Desktop\download.png">   
 
 </Title>  
 </Head>  
