--- a/html/LED Color.html
+++ b/html/LED Color.html
@@ -16,9 +16,9 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> What color is the LED? <br>
 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/flashing red green.html">FLASHING RED/GREEN </a> |
+<a href="flashing red green.html">FLASHING RED/GREEN </a> |
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/white.html">FLASHING WHITE </a> |
+<a href="white.html">FLASHING WHITE </a> |
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">FLASHING BLUE </a> |
 
