--- a/html/Outdoor.html
+++ b/html/Outdoor.html
@@ -15,7 +15,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> 
 
 <a href="V723-724.html">ADC-V723/ADC-V724X </a>	<BR> 
-<img src="ts3support.github.io/images/723-724.jpg">
+<img src="https://ts3support.github.io/images/723-724.jpg">
 
 
 <p><B><BR> 
