--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <Title>     
 CAMERA TROUBLESHOOTING GUIDE
 
-   <Body background="C:\Users\513815\Desktop\download.png">   
+   <Body background="https://ts3support.github.io/images/download.png">   
 
 </Title>  
 </Head>  
