--- a/html/DOORBELL.HTML
+++ b/html/DOORBELL.HTML
@@ -15,16 +15,16 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/SKYBELLHD.html">SKYBELL HD </a>
-<img src="skybellhd.jpg">	
+<img src="https://ts3support.github.io/images/skybellhd.jpg">	
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-VDB105X </a>
-<img src="vdb105x.jpg">	<BR> 
+<img src="https://ts3support.github.io/images/vdb105x.jpg">	<BR> 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-VDB770 </a>
-<img src="vdb770.jpg">	
+<img src="https://ts3support.github.io/images/vdb770.jpg">	
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-VDB780 </a>
-<img src="vdb780.jpg">	<BR> 
+<img src="https://ts3support.github.io/images/vdb780.jpg">	<BR> 
 
 
 
