--- a/html/V723-724.html
+++ b/html/V723-724.html
@@ -9,7 +9,7 @@ CAMERA TROUBLESHOOTING GUIDE
 </Head>  
 <Body>  <CENTER>
    <h1>ADC-V723/V724X</h2>
-<img src="723-724.jpg">
+<img src="https://ts3support.github.io/images/723-724.jpg">
  
 
 
