--- a/html/indoor.html
+++ b/html/indoor.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> 
 
-<a href="SKYBELLHD.html">ADC-V523X HD </a>
+<a href="SKYBELLHD.html">ADC-V523X </a>
 <img src="https://ts3support.github.io/images/v523.jpg">	
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-622-WELL </a>	
