--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <Title>     
 CAMERA TROUBLESHOOTING GUIDE
 
-   <Body background="https://ts3support.github.io/images/download.png">   
+   <Body background= <img src="https://ts3support.github.io/images/download.png">   >
 
 </Title>  
 </Head>  
