--- a/html/No LED.html
+++ b/html/No LED.html
@@ -13,18 +13,10 @@ CAMERA TROUBLESHOOTING GUIDE
  
 
 
-<p><B><BR> What color is the LED? <br>
+<p><B><BR> No LED? <br>
 
 
-<a href="flashing red green.html">FLASHING RED/GREEN </a> |
 
-<a href="white.html">FLASHING WHITE </a> |
-
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">FLASHING BLUE </a> |
-
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">FLASHING GREEN </a> |
-
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">SOLID GREEN </a> |
 
 
 
