--- a/html/No LED.html
+++ b/html/No LED.html
@@ -16,7 +16,8 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> No LED? <br>
 
 
-
+<p><B><BR> <br>
+<img src="https://ts3support.github.io/images/no led.png">
 
 
 
