--- a/html/Not Responding.html
+++ b/html/Not Responding.html
@@ -19,7 +19,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <a href="LED Color.html">Yes </a> |
 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">No </a> |
+<a href="No LED.html">No </a> |
 
 
 
