--- a/html/No LED.html
+++ b/html/No LED.html
@@ -19,7 +19,9 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> <br>
 <img src="https://ts3support.github.io/images/no led.png">
 
-
+Did this resove the issue?
+   <a href="index.html">YES</a>	|
+   <a href="no led 2.html">NO</a>	
 
 <p><B><BR> <p><B><BR> 
 
