--- a/html/indoor.html
+++ b/html/indoor.html
@@ -17,7 +17,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <a href="SKYBELLHD.html">ADC-V523X </a>
 <img src="https://ts3support.github.io/images/v523.jpg">	
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-622-WELL </a>	
+<a href="wellness lights.html">ADC-622-WELL </a>	
 <img src="https://ts3support.github.io/images/wellness.jpg">
 
 <p><B><BR> 
