--- a/html/wellness red.html
+++ b/html/wellness red.html
@@ -23,4 +23,4 @@ If the LED is flashing red on the Wellness camera, the device has been rebooted.
 <p><B><BR> <p><B><BR> 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	|
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/indoor.html">GO BACK</a>	
+<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/wellness lights.html">GO BACK</a>	
