--- a/html/wellness white.html
+++ b/html/wellness white.html
@@ -22,5 +22,5 @@ If the LED is flashing White on the Wellness camera, the device AP mode (Access 
 
 <p><B><BR> <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	|
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/indoor.html">GO BACK</a>	
+<a href="index.html">START OVER</a>	|
+<a href="wellness lights.html">GO BACK</a>	
