Update wellness solid red.html

--- a/html/wellness solid red.html
+++ b/html/wellness solid red.html
@@ -13,7 +13,7 @@ CAMERA TROUBLESHOOTING GUIDE
  
 
 
-<p><B><BR> FLASHING BLUE <br>
+<p><B><BR> SOLID RED <br>
 
 
 If the LED is flashing White on the Wellness camera, the device AP mode (Access Point mode). You should be able to reconnect the camera to WIFI via the IP address (192.168.1.1)
