--- a/html/wellness blue.html
+++ b/html/wellness blue.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> FLASHING BLUE <br>
 
 
-If the LED is flashing White on the Wellness camera, the device AP mode (Access Point mode). You should be able to reconnect the camera to WIFI via the IP address (192.168.1.1)
+If the LED is flashing Blue on the Wellness camera, the device WPS mode (WIFI Pairing mode). You should be able to press the WPS mode button on your ISP router to pair to the camera.
 
 
 
