--- a/html/wellness flash green.html
+++ b/html/wellness flash green.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> FLASHING GREEN <br>
 
 
-If the LED is flashing White on the Wellness camera, the device AP mode (Access Point mode). You should be able to reconnect the camera to WIFI via the IP address (192.168.1.1)
+If the LED is flashing Green on the Wellness camera, the device is connected to your local network, but is not communicating with Alarm.com servers. Try to power cycle the camera by unplugging power for 30 seconds.
 
 
 
