Update wellness solid green.html

--- a/html/wellness solid green.html
+++ b/html/wellness solid green.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> SOLID GREEN <br>
 
 
-If the LED is flashing White on the Wellness camera, the device AP mode (Access Point mode). You should be able to reconnect the camera to WIFI via the IP address (192.168.1.1)
+If the LED is Solid Green on the Wellness camera, the device is connected to local network and Alarm.com servers. If you are still having issues with viewing live video, check the WIFI signal strength and make sure it is above 80%
 
 
 
