Update wellness solid red.html

--- a/html/wellness solid red.html
+++ b/html/wellness solid red.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> SOLID RED <br>
 
 
-If the LED is flashing White on the Wellness camera, the device AP mode (Access Point mode). You should be able to reconnect the camera to WIFI via the IP address (192.168.1.1)
+If the LED is Solid Red on the Wellness camera, the device has no local or Internet connection. Try power cycling the camera by unplugging power for 30 seconds and start the process over. If still SOLID RED, try recconnecting to WIFI via AP mode or WPS.
 
 
 
