Update flashing red green.html

--- a/html/flashing red green.html
+++ b/html/flashing red green.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-<img src="https://ts3support.github.io/images/Red Green.png">
+If the cameras is flashing Red/Green, it has been factory reset. You will need to be deleted from ADC and then learn back in via WPS mode, AP or via the app. 
 
 
 
