--- a/html/flashing red green.html
+++ b/html/flashing red green.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-If the cameras is flashing Red/Green, it has been factory reset. You will need to be deleted from ADC and then learn back in via WPS mode, AP or via the app. 
+<img src="https://ts3support.github.io/image/red green.html>
 
 
 
