--- a/html/flashing red green.html
+++ b/html/flashing red green.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-<img src="https://ts3support.github.io/image/red green.html>
+<img src="https://ts3support.github.io/image/red green.png>
 
 
 
