Update flashing red green.html

--- a/html/flashing red green.html
+++ b/html/flashing red green.html
@@ -22,5 +22,4 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> <p><B><BR> 
 
-<a href="index.html">START OVER</a>	|
-<a href="LED Color.html">GO BACK</a>	
+<a href="index.html">|   START OVER   |</a>	
