--- a/html/white.html
+++ b/html/white.html
@@ -14,15 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-If the cameras is flashing White, it is in AP (Access Point) mode. You will need to be reconnected to WiFi using IP address or through the A3 Smart Home App (192.168.1.1). 
-
-While standing in front of the camera, connect to the cameras WIFI access point in their phone’s wifi settings (ie: ADC-V724x.XX.XX.XX)
-Direct the Member to their default internet browser (Chrome or Safari, typically)
-In the URL/Search bar, have them type in 192.168.1.1
-Once the screen loads, there should be an option to scan for wireless networks
-Advise the member to select their home network, enter their password
-The camera should have a solid green light if successfully connected 
-Open up Mobile Tech, select Add Video Device and add the camera back to the account using the MAC address
+<img src="https://ts3support.github.io/images/white.png">
 
 
 
@@ -33,4 +25,4 @@ Open up Mobile Tech, select Add Video Device and add the camera back to the acco
 
 <p><B><BR> <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	|
+<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">|   START OVER   |</a>
