--- a/html/LED Color.html
+++ b/html/LED Color.html
@@ -20,11 +20,11 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <a href="white.html">FLASHING WHITE </a> |
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">FLASHING BLUE </a> |
+<a href="blue.html">FLASHING BLUE </a> |
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">FLASHING GREEN </a> |
+<a href="flash green.html">FLASHING GREEN </a> |
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">SOLID GREEN </a> |
+<a href="solid green.html">SOLID GREEN </a> |
 
 
 
