--- a/html/blue.html
+++ b/html/blue.html
@@ -13,10 +13,8 @@ CAMERA TROUBLESHOOTING GUIDE
  
 
 
-<p><B><BR> FLASHING BLUE <br>
 
-
-If the LED is flashing White on the Wellness camera, the device AP mode (Access Point mode). You should be able to reconnect the camera to WIFI via the IP address (192.168.1.1)
+<img src="https://ts3support.github.io/images/blue.png">
 
 
 
