--- a/html/blue.html
+++ b/html/blue.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 
-<img src="https://ts3support.github.io/images/blue.png">
+<img src="https://ts3support.github.io/images/flash blue.png">
 
 
 
