--- a/html/blue.html
+++ b/html/blue.html
@@ -20,5 +20,5 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> <p><B><BR> 
 
-<a href="index.html">START OVER</a>	|
-<a href="wellness lights.html">GO BACK</a>	
+<a href="index.html">|   START OVER   |</a>	
+
