--- a/html/flashing red green.html
+++ b/html/flashing red green.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-<img src="https://ts3support.github.io/images/red green.png">
+<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/red green.png">
 
 
 
@@ -22,4 +22,5 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> <p><B><BR> 
 
-<a href="index.html">|   START OVER   |</a>	
+<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	|
+<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/led color.html">GO BACK</a>	
