--- a/html/flash green.html
+++ b/html/flash green.html
@@ -13,14 +13,13 @@ CAMERA TROUBLESHOOTING GUIDE
  
 
 
-<p><B><BR> FLASHING BLUE <br>
+<p><B><BR> <br>
+<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/Flash Green.png">
 
 
-If the LED is flashing White on the Wellness camera, the device AP mode (Access Point mode). You should be able to reconnect the camera to WIFI via the IP address (192.168.1.1)
 
 
 
 <p><B><BR> <p><B><BR> 
 
-<a href="index.html">START OVER</a>	|
-<a href="wellness lights.html">GO BACK</a>	
+<a href="index.html">START OVER</a>	
