--- a/html/flashing red green.html
+++ b/html/flashing red green.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/red green.png">
+<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/Red Green.png">
 
 
 
