--- a/html/flash red.html
+++ b/html/flash red.html
@@ -16,11 +16,13 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> FLASHING RED <br>
 
 
-If the LED is flashing red on the Wellness camera, the device has been rebooted. It should go back to normal functionality within a few minutes. If it continues to flash red, check that the electrical outlet is secured
+<p><B><BR> <br>
+<img src=".png">
+
+
 
 
 
 <p><B><BR> <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	|
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/indoor.html">GO BACK</a>	
+<a href="index.html">START OVER</a>	
