--- a/html/white.html
+++ b/html/white.html
@@ -25,4 +25,4 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> <p><B><BR> 
 
-<a href="index.html">|   START OVER   |</a>
+<a href="index.html">START OVER</a>
