--- a/html/blue.html
+++ b/html/blue.html
@@ -14,7 +14,8 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/flash blue.png">
+<p><B><BR> <br>
+<img src="https://ts3support.github.io/images/red/flash blue.png">
 
 
 
