--- a/html/blue.html
+++ b/html/blue.html
@@ -15,7 +15,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> <br>
 <p><B><BR> <br>
-<img src="https://ts3support.github.io/images/red/flash blue.png">
+<img src="https://ts3support.github.io/images/flash blue.png">
 
 
 
