--- a/html/flash green.html
+++ b/html/flash green.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-<img src="C:/Users/513815/Desktop/Camera%20Troubleshooting/Flash Green.png">
+<img src="https://ts3support.github.io/images/Flash Green.png">
 
 
 
