--- a/html/wellness lights.html
+++ b/html/wellness lights.html
@@ -18,15 +18,15 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <a href="wellness red.html">FLASHING RED </a> |
 
-<a href="wellness white.html">FLASHING WHITE </a> |
+<a href="white.html">FLASHING WHITE </a> |
 
-<a href="wellness blue.html">FLASHING BLUE </a> |
+<a href="blue.html">FLASHING BLUE </a> |
 
-<a href="wellness flash green.html">FLASHING GREEN </a> |
+<a href="flash green.html">FLASHING GREEN </a> |
 
-<a href="wellness solid green.html">SOLID GREEN </a> |
+<a href="solid green.html">SOLID GREEN </a> |
 
-<a href="wellness solid red.html">SOLID RED </a> |
+<a href="solid red.html">SOLID RED </a> |
 
 
 
