--- a/html/indoor.html
+++ b/html/indoor.html
@@ -13,8 +13,10 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> 
+<a href="521.html">ADC-V521 </a>
+<img src="https://ts3support.github.io/images/v523.jpg">	   
 
-<a href="SKYBELLHD.html">ADC-V523X </a>
+<a href="522 523.html">ADC-V522/V523 </a>
 <img src="https://ts3support.github.io/images/v523.jpg">	
 
 <a href="wellness.html">ADC-622-WELL </a>	
