--- a/html/Outdoor.html
+++ b/html/Outdoor.html
@@ -14,7 +14,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> 
 <a href="722.html">ADC-V721/ADC-V722 </a>	<BR> 
-<img src="https://ts3support.github.io/images/722.jpg">
+<img src="https://ts3support.github.io/images/v722.jpg">
    
 <a href="V723-724.html">ADC-V723/ADC-V724X </a>	<BR> 
 <img src="https://ts3support.github.io/images/723-724.jpg">
