--- a/html/indoor.html
+++ b/html/indoor.html
@@ -13,14 +13,20 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> 
-<a href="521.html">ADC-V521 </a>
-<img src="https://ts3support.github.io/images/v521.jpg">	   
-
-<a href="522 523.html">ADC-V522/V523 </a>
-<img src="https://ts3support.github.io/images/v523.jpg">	
-
-<a href="wellness.html">ADC-622-WELL </a>	
-<img src="https://ts3support.github.io/images/wellness.jpg">
+<table>
+  <tr>
+    <td><img src="https://ts3support.github.io/images/v521.jpg"></td>
+    <td><a href="521.html">ADC-V521 </a></td>
+  </tr>
+  <tr>
+    <td><img src="https://ts3support.github.io/images/v523.jpg"></td>
+    <td><a href="522 523.html">ADC-V522/V523 </a></td>
+  </tr>
+  <tr>
+    <td><img src="https://ts3support.github.io/images/wellness.jpg"></td>
+    <td><a href="wellness.html">ADC-622-WELL </a></td>
+  </tr>
+</table>
 
 <p><B><BR> 
 <p><B><BR> 
