--- a/html/indoor.html
+++ b/html/indoor.html
@@ -16,15 +16,13 @@ CAMERA TROUBLESHOOTING GUIDE
 <table>
   <tr>
     <td><img src="https://ts3support.github.io/images/v521.jpg"></td>
-    <td><a href="521.html">ADC-V521 </a></td>
-  </tr>
-  <tr>
     <td><img src="https://ts3support.github.io/images/v523.jpg"></td>
-    <td><a href="522 523.html">ADC-V522/V523 </a></td>
+    <td><img src="https://ts3support.github.io/images/wellness.jpg"></td>
   </tr>
   <tr>
-    <td><img src="https://ts3support.github.io/images/wellness.jpg"></td>
-    <td><a href="wellness.html">ADC-622-WELL </a></td>
+    <td><a href="521.html">ADC-V521 </a></td>
+    <td><a href="522 523.html">ADC-V522/V523</td>
+    <td><a href="wellness.html">ADC-622-WELL</a></td>
   </tr>
 </table>
 
