--- a/html/indoor.html
+++ b/html/indoor.html
@@ -20,9 +20,9 @@ CAMERA TROUBLESHOOTING GUIDE
     <td><img src="https://ts3support.github.io/images/wellness.jpg"></td>
   </tr>
   <tr>
-    <td><CENTER><a href="521.html">ADC-V521</a></CENTER>CENTER></td>
-    <td><CENTER><a href="522 523.html">ADC-V522/V523</a></CENTER>CENTER></td>
-    <td><CENTER><a href="wellness.html">ADC-622-WELL</a></CENTER>CENTER></td>
+    <td><CENTER><a href="521.html">ADC-V521</a></CENTER></td>
+    <td><CENTER><a href="522 523.html">ADC-V522/V523</a></CENTER></td>
+    <td><CENTER><a href="wellness.html">ADC-622-WELL</a></CENTER></td>
   </tr>
 </table>
 
