--- a/html/Outdoor.html
+++ b/html/Outdoor.html
@@ -13,12 +13,16 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> 
-<a href="722.html">ADC-V721/ADC-V722 </a>	
-<img src="https://ts3support.github.io/images/v722.jpg">
-   
-<a href="V723-724.html">ADC-V723/ADC-V724X </a>	
-<img src="https://ts3support.github.io/images/723-724.jpg">
-
+<table>
+  <tr>
+    <td><img src="https://ts3support.github.io/images/v722.jpg"></td>
+    <td><img src="https://ts3support.github.io/images/723-724.jpg"></td>
+  </tr>
+  <tr>
+    <td><CENTER><a href="722.html">ADC-V721/ADC-V722 </a></CENTER></td>
+    <td><CENTER><a href="V723-724.html">ADC-V723/ADC-V724X</a>	</CENTER></td>
+  </tr>
+</table>   
 
 <p><B><BR> 
 
