--- a/html/DOORBELL.HTML
+++ b/html/DOORBELL.HTML
@@ -14,17 +14,21 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/SKYBELLHD.html">SKYBELL HD </a>
-<img src="https://ts3support.github.io/images/skybellhd.jpg">	
+<table>
+  <tr>
+    <td><img src="https://ts3support.github.io/images/skybellhd.jpg"></td>
+    <td><img src="https://ts3support.github.io/images/vdb105jpg"></td>
+    <td><img src="https://ts3support.github.io/images/vdb770.jpg"></td>
+    <td><img src="https://ts3support.github.io/images/vdb780.jpg"></td>
+  </tr>
+  <tr>
+    <td><a href="skybellhd.html">Skybell HD </a></td>
+    <td><a href="vdb105.html">ADC-VDB105/V523</td>
+    <td><a href="770.html">ADC-VDB770</a></td>
+    <td><a href="780.html">ADC-VDB780</a></td>
+  </tr>
+</table>
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-VDB105X </a>
-<img src="https://ts3support.github.io/images/vdb105x.jpg">	<BR> 
-
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-VDB770 </a>
-<img src="https://ts3support.github.io/images/vdb770.jpg">	
-
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">ADC-VDB780 </a>
-<img src="https://ts3support.github.io/images/vdb780.jpg">	<BR> 
 
 
 
