--- a/html/DOORBELL.HTML
+++ b/html/DOORBELL.HTML
@@ -22,12 +22,13 @@ CAMERA TROUBLESHOOTING GUIDE
     <td><img src="https://ts3support.github.io/images/vdb780.jpg"></td>
   </tr>
   <tr>
-    <td><a href="skybellhd.html">Skybell HD </a></td>
-    <td><a href="vdb105.html">ADC-VDB105/V523</td>
-    <td><a href="770.html">ADC-VDB770</a></td>
-    <td><a href="780.html">ADC-VDB780</a></td>
+    <td><center><a href="skybellhd.html">Skybell HD</a></center></td>
+    <td><center><a href="vdb105.html">ADC-VDB105/V523</a></center></td>
+    <td><center><a href="770.html">ADC-VDB770</a></center></td>
+    <td><center><a href="780.html">ADC-VDB780</a></center></td>
   </tr>
 </table>
+
 
 
 
