--- a/html/DOORBELL.HTML
+++ b/html/DOORBELL.HTML
@@ -17,7 +17,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <table>
   <tr>
     <td><img src="https://ts3support.github.io/images/skybellhd.jpg"></td>
-    <td><img src="https://ts3support.github.io/images/vdb105jpg"></td>
+    <td><img src="https://ts3support.github.io/images/vdb105.jpg"></td>
     <td><img src="https://ts3support.github.io/images/vdb770.jpg"></td>
     <td><img src="https://ts3support.github.io/images/vdb780.jpg"></td>
   </tr>
