--- a/html/DOORBELL.HTML
+++ b/html/DOORBELL.HTML
@@ -17,13 +17,13 @@ CAMERA TROUBLESHOOTING GUIDE
 <table>
   <tr>
     <td><img src="https://ts3support.github.io/images/skybellhd.jpg"></td>
-    <td><img src="https://ts3support.github.io/images/vdb105.jpg"></td>
+    <td><img src="https://ts3support.github.io/images/vdb105x.jpg"></td>
     <td><img src="https://ts3support.github.io/images/vdb770.jpg"></td>
     <td><img src="https://ts3support.github.io/images/vdb780.jpg"></td>
   </tr>
   <tr>
     <td><center><a href="skybellhd.html">Skybell HD</a></center></td>
-    <td><center><a href="vdb105.html">ADC-VDB105/V523</a></center></td>
+    <td><center><a href="vdb105.html">ADC-VDB105</a></center></td>
     <td><center><a href="770.html">ADC-VDB770</a></center></td>
     <td><center><a href="780.html">ADC-VDB780</a></center></td>
   </tr>
