--- a/html/SKYBELLHD.HTML
+++ b/html/SKYBELLHD.HTML
@@ -26,5 +26,4 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">START OVER</a>	|
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/DOORBELL.html">GO BACK</a>	|
+<a href="index.html">START OVER</a>
