--- a/html/521.html
+++ b/html/521.html
@@ -18,7 +18,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <a href="wellness lights.html">Video Device Not Responding </a> |
 
 
-<a href=".html">Not Recording Clips </a> |
+<a href="not recording1.html">Not Recording Clips </a> |
 
 
 <a href=".html">Stream Timing Out </a> |
