--- a/html/V723-724.html
+++ b/html/V723-724.html
@@ -18,7 +18,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <a href="Not Responding.html">Video Device Not Responding </a> |
 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">Not Recording Clips </a> |
+<a href="not recording1.html">Not Recording Clips </a> |
 
 
 <a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">Stream Timing Out </a> |
