--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <Title>     
 CAMERA TROUBLESHOOTING GUIDE
 
-   <Body background= <img src="https://ts3support.github.io/images/download.png">   >
+   <p style="background-image:img src="https://ts3support.github.io/images/download.png">
 
 </Title>  
 </Head>  
