--- a/html/DOORBELL.HTML
+++ b/html/DOORBELL.HTML
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <table>
   <tr>
-    <td><img src="https://ts3support.github.io/images/skybellhd.jpg"></td>
+    <td><img src="https://ts3support.github.io/images/SKYBELLHD.jpg"></td>
     <td><img src="https://ts3support.github.io/images/vdb105x.jpg"></td>
     <td><img src="https://ts3support.github.io/images/vdb770.jpg"></td>
     <td><img src="https://ts3support.github.io/images/vdb780.jpg"></td>
