--- a/html/Camera Troubleshotting.html
+++ b/html/Camera Troubleshotting.html
@@ -4,19 +4,15 @@
 <Title>     
 CAMERA TROUBLESHOOTING GUIDE
 
-
 </Title>  
 </Head>  
 <Body>  <CENTER>
    <h1>Camera Troubleshooting</h2>
  
-
-
-
 <p><B>SELECT A CAMERA TYPE<BR> 
-<a href="indoor.html">INDOOR</a>,  |
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Outdoor.html">OUTDOOR</a>	|
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/DOORBELL.html">DOORBELL</a>
+<a href="https://ts3support.github.io/html/indoor.html">INDOOR</a>,  |
+<a href="https://ts3support.github.io/html/Outdoor.html">OUTDOOR</a>	|
+<a href="https://ts3support.github.io/html/DOORBELL.html">DOORBELL</a>
 </p>
 
 
