--- a/html/SKYBELLHD.HTML
+++ b/html/SKYBELLHD.HTML
@@ -4,23 +4,20 @@
 <Title>     
 CAMERA TROUBLESHOOTING GUIDE
 
-
 </Title>  
 </Head>  
 <Body>  <CENTER>
    <h1>SKYBELLHD</h2>
  
-
-
 <p><B><BR> 
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">NO LIGHTS HD </a>	|
+<a href=".html">NO LIGHTS HD </a>	|
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">SOLID GREEN </a>	|
+<a href=".html">SOLID GREEN </a>	|
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">BLINKING RED & GREEN </a>	|
+<a href=".html">BLINKING RED & GREEN </a>	|
 
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">BLINKING RED </a>	
+<a href=".html">BLINKING RED </a>	
 
 
 
