--- a/html/V723-724.html
+++ b/html/V723-724.html
@@ -4,30 +4,18 @@
 <Title>     
 CAMERA TROUBLESHOOTING GUIDE
 
-
 </Title>  
 </Head>  
 <Body>  <CENTER>
    <h1>ADC-V723/V724X</h2>
 <img src="https://ts3support.github.io/images/723-724.jpg">
  
-
-
 <p><B><BR> 
 
 <a href="Not Responding.html">Video Device Not Responding </a> |
-
-
 <a href="not recording1.html">Not Recording Clips </a> |
-
-
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">Stream Timing Out </a> |
-
-
-<a href="file:///C:/Users/513815/Desktop/Camera%20Troubleshooting/Camera%20Troubleshotting.html">Picture Quality Issues </a>
-
-
-
+<a href=".html">Stream Timing Out </a> |
+<a href=".html">Picture Quality Issues </a>
 
 <p><B><BR> <p><B><BR> 
 
