--- a/html/wellness lights.html
+++ b/html/wellness lights.html
@@ -16,7 +16,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> What color is the LED? <br>
 
 
-<a href="wellness red.html">FLASHING RED </a> |
+<a href="flash red.html">FLASHING RED </a> |
 
 <a href="white.html">FLASHING WHITE </a> |
 
