--- a/html/flash red.html
+++ b/html/flash red.html
@@ -17,7 +17,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 
 <p><B><BR> <br>
-<img src=".png">
+<img src="https://ts3support.github.io/images/flash red.png">
 
 
 
