--- a/html/wellness.html
+++ b/html/wellness.html
@@ -15,7 +15,7 @@ CAMERA TROUBLESHOOTING GUIDE
 
 <p><B><BR> 
 
-<a href="wellness lights.html">Video Device Not Responding </a> |
+<a href="LED Color.html">Video Device Not Responding </a> |
 
 
 <a href="not recording1.html">Not Recording Clips </a> |
