--- a/html/indoor.html
+++ b/html/indoor.html
@@ -21,7 +21,7 @@ CAMERA TROUBLESHOOTING GUIDE
   </tr>
   <tr>
     <td><CENTER><a href="521.html">ADC-V521/ADC-V522</a></CENTER></td>
-    <td><CENTER><a href="522 523.html">ADC-V523</a></CENTER></td>
+    <td><CENTER><a href="523.html">ADC-V523</a></CENTER></td>
     <td><CENTER><a href="wellness.html">ADC-622-WELL</a></CENTER></td>
   </tr>
 </table>
