--- a/html/LED Color.html
+++ b/html/LED Color.html
@@ -12,10 +12,12 @@ CAMERA TROUBLESHOOTING GUIDE
 <p><B><BR> What color is the LED? <br>
 
 <a href="flashing red green.html">FLASHING RED/GREEN </a> |
-<a href="white.html">FLASHING WHITE </a> |
-<a href="blue.html">FLASHING BLUE </a> |
-<a href="flash green.html">FLASHING GREEN </a> |
-<a href="solid green.html">SOLID GREEN </a> |
+<a href="flash red.html">FLASHING RED</a> |   
+<a href="white.html">FLASHING WHITE</a> |
+<a href="blue.html">FLASHING BLUE</a> |
+<a href="flash green.html">FLASHING GREEN</a> |
+<a href="solid green.html">SOLID GREEN</a> |
+<a href="solid red.html">SOLID RED</a> |   
 
 <p><B><BR> <p><B><BR> 
 
