--- a/html/LED Color.html
+++ b/html/LED Color.html
@@ -17,7 +17,7 @@ CAMERA TROUBLESHOOTING GUIDE
 <a href="blue.html">FLASHING BLUE</a> |
 <a href="flash green.html">FLASHING GREEN</a> |
 <a href="solid green.html">SOLID GREEN</a> |
-<a href="solid red.html">SOLID RED</a> |   
+<a href="solid red.html">SOLID RED</a>
 
 <p><B><BR> <p><B><BR> 
 
