Update Note Taker Update.html

--- a/html/Note Taker Update.html
+++ b/html/Note Taker Update.html
@@ -70,8 +70,8 @@ function copyForm() {
 
 
 <p><B>FOR SERVICE APPOINTMENT, 
-<a href="file:///C:/Users/513815/Desktop/TECH%20VISIT.HTML" target="_blank" rel="noopener noreferrer">RESI SCHEDULING</a>, OR 
-<a href="file:///C:/Users/513815/Desktop/DEALER%20SERVICE.HTML" target="_blank" rel="noopener noreferrer">DEALER SERVICE</a></p>
+<a href="TECH VISIT.HTML" target="_blank" rel="noopener noreferrer">RESI SCHEDULING</a>, OR 
+<a href="DEALER SERVICE.HTML" target="_blank" rel="noopener noreferrer">DEALER SERVICE</a></p>
 
 </body>
 </html>
