--- a/html/TECH VISIT.HTML
+++ b/html/TECH VISIT.HTML
@@ -20,7 +20,7 @@ SERVICE VISIT INFO
 
 	<form id="notepad">
 
-<input type="checkbox"> </label><br>
+<input type="checkbox">TSEXEMPT?</label><br>
 
   <label for="A"><b>Access/Gate/Lockbox:</b></label><br>
   <input type="text" id="A" name="A"><br>
