--- a/html/TECH VISIT.HTML
+++ b/html/TECH VISIT.HTML
@@ -61,7 +61,7 @@ function copyForm() {
     var F = document.getElementById("F").value;
     var G = document.getElementById("G").value;
 
-    var output = "ACCESS/GATE/LOCKBOX: " + A + "\nSYSTEM TYPE: " + B + "\nSYSTEM #: " + C + "\nISSUE: " + D + "\nNAME/CONTACT#: " + E + "\nQUOTED RATE: " + F ; 
+    var output = "TSEXEMPT " + A + "ACCESS/GATE/LOCKBOX: " + B + "\nSYSTEM TYPE: " + C + "\nSYSTEM #: " + D + "\nISSUE: " + E + "\nNAME/CONTACT#: " + F + "\nQUOTED RATE: " + G ; 
     navigator.clipboard.writeText(output);
 }
 
