--- a/html/TECH VISIT.HTML
+++ b/html/TECH VISIT.HTML
@@ -20,13 +20,12 @@ SERVICE VISIT INFO
 
 	<form id="notepad">
 
-<input type="checkbox">TSEXEMPT?</label><br>
-
+  
   <label for="A"><b>TSEXEMPT?:</b></label><br>
   <input type="checkbox" id="A" name="A"><br>
 
-  <label for="A"><b>Access/Gate/Lockbox:</b></label><br>
-  <input type="text" id="A" name="A"><br>
+  <label for="B"><b>Access/Gate/Lockbox:</b></label><br>
+  <input type="text" id="B" name="B"><br>
 
   <label for="C"><b>SYSTEM TYPE:</b></label><br>
   <input type="text" id="C" name="C" value=""><br>
