--- a/html/TECH VISIT.HTML
+++ b/html/TECH VISIT.HTML
@@ -61,15 +61,9 @@ function copyForm() {
     var G = document.getElementById("G").value;
 
 
-function myFunction() {
-  // Get the checkbox
-  var checkBox = document.getElementById("myCheck");
-  // Get the output text
-  var text = document.getElementById("text");
-
   // If the checkbox is checked, display the output text
-  if (checkBox.checked == true){
-    text.style.display = "block";
+  if (A.checked == true){
+    text.style.display = "TSEXEMPT";
   } else {
     text.style.display = "none";
   }
