--- a/html/TECH VISIT.HTML
+++ b/html/TECH VISIT.HTML
@@ -22,7 +22,7 @@ SERVICE VISIT INFO
 
   
   <label for="A"><b>TSEXEMPT?:</b></label><br>
-   <label for="A"> TSEXEMPT</label><br>
+   <input type="checkbox" id=" " name=" " value="TSEXEMPT">
 
   <label for="B"><b>Access/Gate/Lockbox:</b></label><br>
   <input type="text" id="B" name="B"><br>
