--- a/html/TECH VISIT.HTML
+++ b/html/TECH VISIT.HTML
@@ -21,7 +21,7 @@ SERVICE VISIT INFO
 	<form id="notepad">
 
   
-  <label for="A"><b>TSEXEMPT?:</b></label><br>
+  <label for="A"><b>TSEXEMPT?:</b></label>
    <input type="checkbox" id="A" name=" " value="TSEXEMPT"><br>
 
   <label for="B"><b>Access/Gate/Lockbox:</b></label><br>
