--- a/html/TECH VISIT.HTML
+++ b/html/TECH VISIT.HTML
@@ -22,7 +22,7 @@ SERVICE VISIT INFO
 
   
   <label for="A"><b>TSEXEMPT?:</b></label>
-   <input type="checkbox" id="A" name=" " value="TSEXEMPT"><br>
+   <input type="checkbox" id="A" name=" " value="TSEXEMPT"><br><br>
 
   <label for="B"><b>Access/Gate/Lockbox:</b></label><br>
   <input type="text" id="B" name="B"><br>
